<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button_call"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onButtonClicked"
        android:text="@string/app_call"
        app:layout_constraintBottom_toTopOf="@+id/button_sms"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/textView" />

    <Button
        android:id="@+id/button_sms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_sms"
        android:onClick="onButtonClicked"
        app:layout_constraintBottom_toTopOf="@+id/button_mms"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_call" />

    <Button
        android:id="@+id/button_mms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_mms"
        android:onClick="onButtonClicked"
        app:layout_constraintBottom_toTopOf="@+id/button_web"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_sms" />

    <Button
        android:id="@+id/button_web"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onButtonClicked"
        android:text="@string/app_web"
        app:layout_constraintBottom_toTopOf="@+id/button_geo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_mms" />

    <Button
        android:id="@+id/button_geo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_geo"
        android:onClick="onButtonClicked"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_web" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/app_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.058" />
</androidx.constraintlayout.widget.ConstraintLayout>