<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".URLActivity">

    <TextView
        android:id="@+id/url_activity_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/url_app_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TableLayout
        android:id="@+id/tableLayout3"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <TextView
                android:id="@+id/url_activity_label_url"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_url" />

            <EditText
                android:id="@+id/input_url"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/url_app_enter_url"
                android:inputType="textUri"
                android:textColorHint="#757575" />
        </TableRow>

    </TableLayout>

    <Button
        android:id="@+id/url_button_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onBtnCancelClicked"
        android:text="@string/app_cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/url_button_validate"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout3" />

    <Button
        android:id="@+id/url_button_validate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onBtnValidClicked"
        android:text="@string/app_valid"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/url_button_cancel"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout3" />

</androidx.constraintlayout.widget.ConstraintLayout>